# AI-Supply-Chain-Trust

./: .dockerignore  .gcloudignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  env.example
.agents/: customer-research.md  product-marketing.md
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/deploy/production/: deploy-prod.sh  docker-compose.prod.yml  nginx.conf
.github/deploy/production/monitoring/: alert-policies.yaml
.github/workflows/: codeql.yml  deploy-production.yml  frontend-ci.yml  rust-ci.yml  security-context-audit.yml  security-independence.yml
assets/brand/: README.md
assets/brand/exploration/: prompts.md
backend/: Cargo.toml  Dockerfile  README.md  fact_checker.py  llm_guardrail.py
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: lib.rs
backend/crates/cli/: Cargo.toml
backend/crates/cli/src/: lib.rs
backend/crates/discovery/: Cargo.toml
backend/crates/discovery/src/: lib.rs
backend/crates/evaluator/: Cargo.toml
backend/crates/evaluator/src/: ai_mcp.rs  code_safety.rs  lib.rs  model_integrity.rs  openssf_scorecard.rs  patterns.rs  pig.rs  pillar.rs  publisher.rs  repo_health.rs  seed.rs  supply_chain.rs  trust_signals.rs
backend/crates/github_metadata/: Cargo.toml
backend/crates/github_metadata/src/: lib.rs
backend/crates/intelligence/: Cargo.toml
backend/crates/intelligence/src/: lib.rs  nvd.rs
backend/crates/intelligence/tests/fixtures/: security_history_precision.json
backend/crates/llm/: Cargo.toml
backend/crates/llm/examples/: quality_benchmark.rs
backend/crates/llm/src/: fact_checker.rs  guardrail.rs  lib.rs  llm_client.rs  tasks.rs
backend/crates/llm/tests/: llm_hallucination_guard.rs
backend/crates/llm/tests/fixtures/: model-quality-v2.json
backend/crates/models/: Cargo.toml
backend/crates/models/src/: context.rs  enums.rs  finding.rs  lib.rs  pillar.rs  report.rs  scanner.rs
backend/crates/render/: Cargo.toml
backend/crates/render/src/: head.rs  lib.rs  pages.rs  security.rs
backend/crates/scanner_runner/: Cargo.toml
backend/crates/scanner_runner/src/: lib.rs
backend/crates/scoring/: Cargo.toml
backend/crates/scoring/proptest-regressions/: lib.txt
backend/crates/scoring/src/: lib.rs
backend/crates/security_context/: Cargo.toml
backend/crates/security_context/src/: context.rs  envelope.rs  evidence.rs  fingerprints.rs  leads.rs  lib.rs  regression_contracts.rs  render.rs  top_risks.rs
backend/crates/security_context/tests/: regression_replay.rs
backend/crates/security_context/tests/fixtures/: regression_replay.json
backend/crates/server/: Cargo.toml
backend/crates/server/src/: lib.rs
backend/crates/service/: Cargo.toml
backend/crates/service/src/: lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/migrations/postgres/: 001_initial.sql
backend/tests/: test_llm_hallucination_guard.py
competitor-profiles/: _summary.md  endor-labs.md  openssf-scorecard.md  repo-trust.md  repository-trust-doctor.md  socket.md
competitor-profiles/raw/endor-labs/2026-07-16/scrapes/: homepage-and-docs.md  pricing.md  reviews.md
competitor-profiles/raw/openssf-scorecard/2026-07-16/scrapes/: homepage.md
competitor-profiles/raw/repo-trust/2026-07-16/scrapes/: github-readme.md
competitor-profiles/raw/repository-trust-doctor/2026-07-16/scrapes/: github-readme.md
competitor-profiles/raw/socket/2026-07-16/scrapes/: homepage.md  pricing.md  reviews.md
docs/: README.md  analytics-tracking-plan.md  api.md  architecture.md  data-policy.md  deployment.md  marketing.md  model-provider-audit.md  social-content-system-4-weeks-tr.md  testing-and-performance.md
frontend/: .prettierignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: sitemap.xml
frontend/src/: index.css  main.jsx  mobile-layout.test.js
frontend/src/app/: AppShell.jsx  AppShell.test.jsx  router.jsx  router.test.jsx
frontend/src/components/: AnalyticsConsent.jsx  AnalyticsConsent.test.jsx  FeedbackWidget.jsx  FeedbackWidget.test.jsx  HowItWorksPipeline.jsx  PageAnalytics.jsx  PageAnalytics.test.jsx  ScanHeroBackground.jsx  ScanHeroBackground.test.jsx  ui.jsx
frontend/src/features/repositories/: RepositoryViews.jsx
frontend/src/features/security-context/: ContextReport.analytics.test.jsx  ContextReport.jsx  ContextReport.test.jsx  ScanProgress.jsx
frontend/src/hooks/: use-async.js  useCanvasAnimation.js  useCanvasAnimation.test.jsx
frontend/src/lib/: api-client.js  api-client.test.js  posthog.js  posthog.test.js  repository-search.js  repository-search.test.js  repository.js  repository.test.js
frontend/src/pages/: ContextPage.jsx  ContextPage.test.jsx  ContextsPage.jsx  ContextsPage.test.jsx  HomePage.jsx  HomePage.test.jsx  LeaderboardPage.jsx  LegalPage.jsx  NotFoundPage.jsx  ResultPage.jsx  ResultPage.test.jsx  StaticPages.test.jsx
frontend/web/: index.html  llms.txt  robots.txt  sitemap.xml
frontend/web/assets/css/: design-system.css
frontend/web/assets/js/: ContextPage.js  ContextsPage.js  HomePage.js  LeaderboardPage.js  LegalPage.js  NotFoundPage.js  RepositoryViews.js  ResultPage.js  app.js  chunk-KS7C4IRE.js  module.js  search.js  use-async.js
scripts/: benchmark.sh  benchmark_scan_pipeline.sh  check_secret_expiry.py  security_independence_guard.sh  shadow_compare.py  test_evidence.sh
