[package]
name = "ai-supply-chain-trust-evaluator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-supply-chain-trust-models = { path = "../models" }
ai-supply-chain-trust-scoring = { path = "../scoring" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex = "1"

[features]
default = []
seed-data = []
