[package]
name = "ai-supply-chain-trust-github-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ai-supply-chain-trust-models = { path = "../models" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
