[package]
name = "ai-supply-chain-trust-security-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-supply-chain-trust-llm = { path = "../llm" }
ai-supply-chain-trust-models = { path = "../models" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
