[package]
name = "ai-supply-chain-trust-server-new"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ai-supply-chain-trust-models = { path = "../models" }
ai-supply-chain-trust-service = { path = "../service" }
ai-supply-chain-trust-intelligence = { path = "../intelligence" }
ai-supply-chain-trust-security-context = { path = "../security_context" }
ai-supply-chain-trust-storage = { path = "../storage" }
ai-supply-chain-trust-render = { path = "../render" }
ai-supply-chain-trust-auth = { path = "../auth" }
ai-supply-chain-trust-discovery = { path = "../discovery" }
ai-supply-chain-trust-llm = { path = "../llm" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
anyhow.workspace = true
chrono.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
