[package]
name = "ai-supply-chain-trust-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ai-supply-chain-trust-models = { path = "../models" }
ai-supply-chain-trust-scoring = { path = "../scoring" }
ai-supply-chain-trust-evaluator = { path = "../evaluator" }
ai-supply-chain-trust-intelligence = { path = "../intelligence" }
ai-supply-chain-trust-security-context = { path = "../security_context" }
ai-supply-chain-trust-github-metadata = { path = "../github_metadata" }
ai-supply-chain-trust-storage = { path = "../storage" }
ai-supply-chain-trust-scanner-runner = { path = "../scanner_runner" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
