[package]
name = "ai-supply-chain-trust-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ai-supply-chain-trust-models = { path = "../models" }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { workspace = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
